syntax = "proto3";
package elipticoin;

service BaseToken {
  rpc BalanceOf (Address) returns (Balance) {}
}

message Address {
  bytes bytes = 1;
}

message Balance {
  uint64 amount = 1;
}

